# shippy

./: .gitignore  .shippy.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  Taskfile.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/shippy/: __init__.py  cli.py  config.py  constants.py  errors.py  git.py  github.py  log.py  ollama.py  prompts.py  workflow.py
src/shippy/review/: __init__.py  constants.py  engine.py
src/shippy/summary/: __init__.py  constants.py  engine.py
src/shippy/templates/: .shippy.toml
tests/: test_git.py  test_review.py  test_shippy.py  test_summary.py
